2008-07-20  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by David Kilzer.

        Fix high CPU usage on testmyiphone.com.

        - Made the logic for determining when to stop looking for meta charset more strainghtforward.
        Previously, this happened if a tag that's disallowed in HEAD was seen past the first 512
        bytes. Now, the algorithm bails out at the boundary if we are lo longer in HEAD (i.e, an
        offending tag was seen at any point before).

        - The above change made one of our regression tests fail, because it had its <meta>
        declaration past the 512 byte boundary. Fixed it by raising the boundary to 1024 bytes.

        - Made the algorithm bail out quickly if a comment that's not in HEAD crosses the boundary.

        - Moved a check for XML content type out of the loop.

        * loader/TextResourceDecoder.cpp:
        (WebCore::TextResourceDecoder::checkForHeadCharset): 

2008-07-19  Oliver Hunt  <oliver@apple.com>

        Reviewed by NOBODY (Build fix).

        Attempt to fix windows build

        * svg/SVGAnimatedProperty.h:

2008-07-19  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Oliver & parts by Eric.

        Fixes: https://bugs.webkit.org/show_bug.cgi?id=20051

        Rewrite animated property concept without heavy macro usage, replace by a templatified solution.
        Fewer virtual function calls, no more usage of the tear-off's within internal code (synchronization needed it before.)

        * dom/Element.cpp:
        (WebCore::Element::attributes):
        (WebCore::Element::getAttribute):
        (WebCore::Element::hasAttributes):
        * dom/Element.h:
        (WebCore::Element::updateAnimatedSVGAttribute): Take const String&, not StringImpl*.
        * svg/SVGAElement.cpp:
        (WebCore::SVGAElement::SVGAElement):
        * svg/SVGAElement.h:
        * svg/SVGAltGlyphElement.h:
        * svg/SVGAnimatedProperty.h: Added.
        * svg/SVGAnimatedTemplate.h: