@@ -124,14 +124,7 @@ namespace WebCore {
         // Tear offs only used by bindings, never in internal code
         PassRefPtr<TearOff> animatedTearOff() const;
 
-#if COMPILER(MSVC)
-#pragma warning(push, 0)
-#pragma warning(disable:4505)
-#endif
-        void synchronize() const;
-#if COMPILER(MSVC)
-#pragma warning(pop)
-#endif
+        virtual void synchronize() const;
 
         void startAnimation() const;
         void stopAnimation();
