@@ -1,3 +1,11 @@
+2008-07-20  Nikolas Zimmermann  <zimmermann@kde.org>
+
+        Rubber stamped by Oliver.
+
+        Another attempt to fix the win build.
+
+        * svg/SVGAnimatedProperty.h:
+
 2008-07-20  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by David Kilzer.
